[package]
name = "loop-ogg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lewton = "0.10.2"
portaudio = "0.7"
libsoxr = "0.2.7"
anyhow = "1.0"
ctrlc = {version = "3.2.1", features = ["termination"]}
log = "0.4"
env_logger = "0.8"
