[package]
name = "loop-ogg"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Solra Bizna <solra@bizna.name>"]
readme = "README.md"

[dependencies]
lewton = "0.10.2"
portaudio = "0.7"
libsoxr = "0.2.7"
anyhow = "1.0"
ctrlc = {version = "3.2.1", features = ["termination"]}
log = "0.4"
env_logger = "0.8"
clap = {version = "3.0.7", features = ["derive", "wrap_help"]}
terminal_size = "0.1.17"
atty = "0.2"
